# ofg-solver

./: .gitignore  README.md  mp4_to_mp3_chunks.sh  pyproject.toml
tests/: test_zoom_transcripts.py
zoom_transcripts/: debug.py  document_summarization.py  embeddings.py  pdf_to_text.py  query.py  transcript.py
